--- a/templates/index.html
+++ b/templates/index.html
@@ -15,14 +15,14 @@
         <div class="action-card">
             <a href="{{ url_for('register_patient') }}" class="action-button">
                 <i class="fas fa-user-plus"></i>
-                <span>Cadastrar Paciente</span>
+                <span>Cadastrar/Editar Paciente</span>
             </a>
         </div>
 
         <div class="action-card">
             <a href="{{ url_for('prescriptions_history') }}" class="action-button">
                 <i class="fas fa-history"></i>
-                <span>Histórico</span>
+                <span>Histórico de prescrições</span>
             </a>
         </div>
     </div>
