--- a/templates/create_prescription.html
+++ b/templates/create_prescription.html
@@ -13,7 +13,10 @@
                 <select name="patient" id="patient" required onchange="updatePreview()">
                     <option value="">Selecione o paciente</option>
                     {% for patient in patients %}
-                    <option value="{{ patient.id }}">{{ patient.name }}</option>
+                    <option value="{{ patient.id }}" data-cpf="{{ patient.cpf }}" data-street="{{ patient.street }}"
+                        data-number="{{ patient.number }}" data-city="{{ patient.city }}"
+                        data-state="{{ patient.state }}" data-country="{{ patient.country }}">
+                        {{ patient.name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -47,25 +50,26 @@
                 <h3>Medicamentos</h3>
                 <div id="medications_list">
                     <!-- Template for medication entry -->
-                    <div class="medication-entry">
-                        <div class="form-group">
-                            <label>Medicamento</label>
-                            <div class="medication-input">
-                                <select class="medication-select" onchange="updateMedicationInfo(this)">
-                                    <option value="">Selecione ou customize</option>
-                                    {% for med in medications %}
-                                    <option value="{{ med.id }}">{{ med.name }}</option>
-                                    {% endfor %}
-                                </select>
+                    <template id="medication-entry-template">
+                        <div class="medication-entry">
+                            <div class="form-group">
+                                <label>Medicamento</label>
+                                <div class="medication-input">
+                                    <select class="medication-select" onchange="updateMedicationInfo(this)">
+                                        <option value="">Selecione ou customize</option>
+                                        {% for med in medications %}
+                                        <option value="{{ med.id }}">{{ med.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
                             </div>
+                            <div class="form-group">
+                                <label>Informações do Medicamento</label>
+                                <textarea class="medication-info" rows="3"></textarea>
+                            </div>
+                            <button type="button" class="btn-remove" onclick="removeMedication(this)">Remover</button>
                         </div>
-                        <div class="form-group">
-                            <label>Informações do Medicamento</label>
-                            <textarea class="medication-info" rows="3"></textarea>
-                            
-                        </div>
-                        <button type="button" class="btn-remove" onclick="removeMedication(this)">Remover</button>
-                    </div>
+                    </template>
                 </div>
                 <button type="button" class="btn-add" onclick="addMedication()">Adicionar Medicamento</button>
             </div>
