--- a/templates/register_patient.html
+++ b/templates/register_patient.html
@@ -47,9 +47,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="number">Número</label>
-                    <input type="text" name="number" id="number" value="{{ patient.number if patient else '' }}"
-                        required>
+                    <label for="house_number">Número</label>
+                    <input type="text" name="house_number" id="house_number"
+                        value="{{ patient.house_number if patient else '' }}" required>
                 </div>
             </div>
 
