keyup for prescription

--- a/templates/create_prescription.html
+++ b/templates/create_prescription.html
@@ -64,7 +64,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Informações do Medicamento</label>
-                                <textarea class="medication-info" rows="3"></textarea>
+                                <textarea class="medication-info" rows="3" onkeyup="updatePreview()"></textarea>
                             </div>
                             <button type="button" class="btn-remove" onclick="removeMedication(this)">Remover</button>
                         </div>
