--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,19 @@
                 <span>Histórico de prescrições</span>
             </a>
         </div>
+        <div class="action-card">
+            <a href="{{ url_for('edit_cids') }}" class="action-button">
+                <i class="fas fa-list-alt"></i>
+                <span>Editar CIDs</span>
+            </a>
+        </div>
+
+        <div class="action-card">
+            <a href="{{ url_for('edit_medications') }}" class="action-button">
+                <i class="fas fa-pills"></i>
+                <span>Editar Medicamentos</span>
+            </a>
+        </div>
     </div>
 
     <div class="recent-activity">
