added delete button

--- a/templates/create_prescription.html
+++ b/templates/create_prescription.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="prescription-container">
     <script src="{{ url_for('static', filename='js/create_prescription.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/common.js') }}"></script>
     <!-- Left Side - Options -->
     <div class="options-panel">
         <h2>Nova Prescrição</h2>
