--- a/templates/register_patient.html
+++ b/templates/register_patient.html
@@ -121,6 +121,7 @@
 
         <div class="form-actions">
             <button type="submit" class="btn-primary">Salvar</button>
+            <button type="button" id="deleteButton" class="btn-secondary" hidden>Excluir</button>
         </div>
     </form>
 </div>
