--- a/templates/edit_medications.html
+++ b/templates/edit_medications.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="edit-medications-page">
     <script src="{{ url_for('static', filename='js/edit_medications.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/common.js') }}"></script>
 
     <h1>Cadastrar/Editar Medicamentos</h1>
 
@@ -32,8 +33,10 @@
         </div>
 
         <div class="form-actions">
-            <button type="submit" class="btn-primary">Salvar</button>
+            <button type="submit" id="saveButton" class="btn-primary">Salvar</button>
+            <button type="button" id="deleteButton" class="btn-secondary" hidden>Excluir</button>
         </div>
+
     </form>
 </div>
 {% endblock %}
